--- a/Lesson4/src/app/styles/style.scss
+++ b/Lesson4/src/app/styles/style.scss
@@ -1,88 +1,83 @@
-.textContainer{
-  // display: block;
-  // background: #fcf2fc69;
-  // border: 1px solid #c72aad; /* рамка */
-  // margin: 10px 10px 20px 10px;
-  // font-family: Arial;
-  // font-size: 0.95em;
-  // padding: 10px;
-  // border-radius: 50px;
-
-  .dataPublication{
-    font-size: 0.75em;
-    padding-top: 10px;
-    padding-left: 10px;
-    padding-bottom: 2px;
-  }
-  .authorPublication{
-    font-size: 0.8em;
-    padding-left: 10px;
-  }
-  .textContainerTitle{
-    color: #941389; /*green*/
-    margin-top: 15px;
-    font-family: Arial;
-    font-size: 1.09em;
-    text-indent:1.8em; /*красная строка*/
-    font-weight: bold;
-  }
-  .textContainerContent{
-    text-indent:1.5em; /*красная строка*/
-    text-align: justify;
-    padding: 10px 10px 0px 10px;
-  }
-  .sourcePublication{
+body {
+  .textContainer{
+   width: 100%;
+  
+    .dataPublication{
+      font-size: 0.75em;
+      padding-top: 10px;
+      padding-left: 10px;
+      padding-bottom: 2px;
+    }
+    .authorPublication{
       font-size: 0.8em;
-      padding: 10px;
+      padding-left: 10px;
+    }
+    .textContainerTitle{
+      color: #941389; /*green*/
+      margin-top: 15px;
+      font-family: Arial;
+      font-size: 1.09em;
+      text-indent:1.8em; /*красная строка*/
+      font-weight: bold;
+    }
+    .textContainerContent{
+      text-indent:1.5em; /*красная строка*/
+      text-align: justify;
+      padding: 10px 10px 0px 10px;
+    }
+    .sourcePublication{
+        font-size: 0.8em;
+        padding: 10px;
+    }
+    button {
+      color: #fff; /* цвет текста */
+      text-decoration: none; /* подчёрк */
+      user-select: none; /*выделение текста */
+      background: rgb(130, 26, 130); /*фон кноп*/
+      padding: 0.7em 1.5em; /*отступ от текста*/
+      margin-left: 82%;
+      outline: none; /*контур в Mozilla */
+    }
+    button {
+      color: #fff; /* цвет текста */
+      text-decoration: none; /* подчёрк */
+      user-select: none; /*выделение текста */
+      background: rgb(104, 18, 97); /*фон кноп*/
+      padding: 0.7em 1.5em; /*отступ от текста*/
+      margin-left: 82%;
+      outline: none; /*контур в Mozilla */
+      border-radius: 50px;
+    }
+    button:hover {
+      background: rgb(37, 164, 26);
+    } /* при наведении курсора*/
+    button:active {
+      background: rgb(37, 100, 26);
+    } /* при нажатии */
   }
-  button {
-    color: #fff; /* цвет текста */
-    text-decoration: none; /* подчёрк */
-    user-select: none; /*выделение текста */
-    background: rgb(130, 26, 130); /*фон кноп*/
-    padding: 0.7em 1.5em; /*отступ от текста*/
-    margin-left: 82%;
-    outline: none; /*контур в Mozilla */
-  }
-  button {
-    color: #fff; /* цвет текста */
-    text-decoration: none; /* подчёрк */
-    user-select: none; /*выделение текста */
-    background: rgb(104, 18, 97); /*фон кноп*/
-    padding: 0.7em 1.5em; /*отступ от текста*/
-    margin-left: 82%;
-    outline: none; /*контур в Mozilla */
+  .textContainer:nth-child(2n+1) {
+    display: block;
+    background: #fcf2fc69;
+    border: 1px solid #c72aad; /* рамка */
+    margin: 10px 10px 20px 10px;
+    font-family: Arial;
+    font-size: 0.95em;
+    padding: 10px;
     border-radius: 50px;
   }
-  button:hover {
-    background: rgb(37, 164, 26);
-  } /* при наведении курсора*/
-  button:active {
-    background: rgb(37, 100, 26);
-  } /* при нажатии */
-}
-.textContainer:nth-child(2n+1) {
-  display: block;
-  background: #fcf2fc69;
-  border: 1px solid #c72aad; /* рамка */
-  margin: 10px 10px 20px 10px;
-  font-family: Arial;
-  font-size: 0.95em;
-  padding: 10px;
-  border-radius: 50px;
-}
-
-.textContainer:nth-child(2n) {
-  display: block;
-  background: #f2fcf369;
-  border: 1px solid #136611; /* рамка */
-  margin: 10px 10px 20px 10px;
-  font-family: Arial;
-  font-size: 0.95em;
-  padding: 10px;
-  border-radius: 50px;
+  
+  .textContainer:nth-child(2n) {
+    display: block;
+    background: #f2fcf369;
+    border: 1px solid #136611; /* рамка */
+    margin: 10px 10px 20px 10px;
+    font-family: Arial;
+    font-size: 0.95em;
+    padding: 10px;
+    border-radius: 50px;
+  }
 }
   
-  
+  @import '_modal-window';
   
   
